// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-salarié > ATMP 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2298
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > ATMP 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2240
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > ATMP 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2255
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > JEI 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3444
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > JEI 2`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 26503
salarié . rémunération . net . payé après impôt: 10966
salarié . rémunération . net . à payer avant impôt: 15994

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > activité partielle 1`] = `
"salarié . contrat . salaire brut: 1560
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 152
salarié . rémunération . net . payé après impôt: 1377
salarié . rémunération . net . à payer avant impôt: 1377

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > activité partielle 2`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 980
salarié . rémunération . net . payé après impôt: 2118
salarié . rémunération . net . à payer avant impôt: 2242"
`;

exports[`calculate simulations-salarié > activité partielle 3`] = `
"salarié . contrat . salaire brut: 8000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1958
salarié . rémunération . net . payé après impôt: 3790
salarié . rémunération . net . à payer avant impôt: 4484"
`;

exports[`calculate simulations-salarié > activité partielle 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1615
salarié . rémunération . net . payé après impôt: 2273
salarié . rémunération . net . à payer avant impôt: 2405"
`;

exports[`calculate simulations-salarié > activité partielle 5`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2767
salarié . rémunération . net . payé après impôt: 2473
salarié . rémunération . net . à payer avant impôt: 2683"
`;

exports[`calculate simulations-salarié > activité partielle 6`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: 3750
salarié . coût total employeur: 740
salarié . rémunération . net . payé après impôt: 1729
salarié . rémunération . net . à payer avant impôt: 1767"
`;

exports[`calculate simulations-salarié > activité partielle 7`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 980
salarié . rémunération . net . payé après impôt: 2206
salarié . rémunération . net . à payer avant impôt: 2242"
`;

exports[`calculate simulations-salarié > aides 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2303
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > aides 2`] = `
"salarié . contrat . salaire brut: 10000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12822
salarié . rémunération . net . payé après impôt: 7740
salarié . rémunération . net . à payer avant impôt: 8926

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > aides 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1866
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > aides 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2473
salarié . rémunération . net . payé après impôt: 1667
salarié . rémunération . net . à payer avant impôt: 1720

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > apprentissage 1`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1050
salarié . rémunération . net . payé après impôt: 1468
salarié . rémunération . net . à payer avant impôt: 1468

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > apprentissage 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3194
salarié . rémunération . net . payé après impôt: 2355
salarié . rémunération . net . à payer avant impôt: 2355"
`;

exports[`calculate simulations-salarié > atmp 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2338
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > avantages 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2471
salarié . rémunération . net . payé après impôt: 1504
salarié . rémunération . net . à payer avant impôt: 1540"
`;

exports[`calculate simulations-salarié > avantages 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2481
salarié . rémunération . net . payé après impôt: 1503
salarié . rémunération . net . à payer avant impôt: 1539"
`;

exports[`calculate simulations-salarié > avantages 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2400
salarié . rémunération . net . payé après impôt: 1513
salarié . rémunération . net . à payer avant impôt: 1548"
`;

exports[`calculate simulations-salarié > cadre 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4121
salarié . rémunération . net . payé après impôt: 2215
salarié . rémunération . net . à payer avant impôt: 2348"
`;

exports[`calculate simulations-salarié > cadre 2`] = `
"salarié . contrat . salaire brut: 8000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 11575
salarié . rémunération . net . payé après impôt: 5022
salarié . rémunération . net . à payer avant impôt: 6245"
`;

exports[`calculate simulations-salarié > cdd 1`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3098
salarié . rémunération . net . payé après impôt: 1827
salarié . rémunération . net . à payer avant impôt: 1894

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 2`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3373
salarié . rémunération . net . payé après impôt: 1922
salarié . rémunération . net . à payer avant impôt: 2009

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 3`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3659
salarié . rémunération . net . payé après impôt: 2109
salarié . rémunération . net . à payer avant impôt: 2197

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 4`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4412
salarié . rémunération . net . payé après impôt: 2241
salarié . rémunération . net . à payer avant impôt: 2375

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 5`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3618
salarié . rémunération . net . payé après impôt: 1803
salarié . rémunération . net . à payer avant impôt: 1871

Notifications affichées : salarié . contrat . CDD . information, salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > contrat pro 1`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1568
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165"
`;

exports[`calculate simulations-salarié > contrat pro 2`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1568
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165"
`;

exports[`calculate simulations-salarié > effectif 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2283
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2294
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2305
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2305
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > frais pro - DFS 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2071
salarié . rémunération . net . payé après impôt: 1613
salarié . rémunération . net . à payer avant impôt: 1613"
`;

exports[`calculate simulations-salarié > frais pro - DFS 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2106
salarié . rémunération . net . payé après impôt: 1562
salarié . rémunération . net . à payer avant impôt: 1584"
`;

exports[`calculate simulations-salarié > frais pro - DFS 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2077
salarié . rémunération . net . payé après impôt: 1566
salarié . rémunération . net . à payer avant impôt: 1588"
`;

exports[`calculate simulations-salarié > frais pro - DFS 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2077
salarié . rémunération . net . payé après impôt: 1566
salarié . rémunération . net . à payer avant impôt: 1588"
`;

exports[`calculate simulations-salarié > frais pro - DFS 5`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2283
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > frais pro - DFS 6`] = `
"salarié . contrat . salaire brut: 1700
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1771
salarié . rémunération . net . payé après impôt: 1342
salarié . rémunération . net . à payer avant impôt: 1342

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > frais pro - DFS 7`] = `
"salarié . contrat . salaire brut: 2600
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3126
salarié . rémunération . net . payé après impôt: 2105
salarié . rémunération . net . à payer avant impôt: 2125"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4387
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5002
salarié . rémunération . net . payé après impôt: 2628
salarié . rémunération . net . à payer avant impôt: 2924"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4693
salarié . rémunération . net . payé après impôt: 2637
salarié . rémunération . net . à payer avant impôt: 2836"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4385
salarié . rémunération . net . payé après impôt: 2354
salarié . rémunération . net . à payer avant impôt: 2551"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5095
salarié . rémunération . net . payé après impôt: 3064
salarié . rémunération . net . à payer avant impôt: 3261"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4385
salarié . rémunération . net . payé après impôt: 2354
salarié . rémunération . net . à payer avant impôt: 2551"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 4`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4361
salarié . rémunération . net . payé après impôt: 2330
salarié . rémunération . net . à payer avant impôt: 2527"
`;

exports[`calculate simulations-salarié > frais pro - outre-mer 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4103
salarié . rémunération . net . payé après impôt: 2510
salarié . rémunération . net . à payer avant impôt: 2586"
`;

exports[`calculate simulations-salarié > frais pro - outre-mer 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4116
salarié . rémunération . net . payé après impôt: 2490
salarié . rémunération . net . à payer avant impôt: 2583"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2323
salarié . rémunération . net . payé après impôt: 1500
salarié . rémunération . net . à payer avant impôt: 1521"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 2`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4295
salarié . rémunération . net . payé après impôt: 2008
salarié . rémunération . net . à payer avant impôt: 2141"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2367
salarié . rémunération . net . payé après impôt: 1472
salarié . rémunération . net . à payer avant impôt: 1493"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4387
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4387
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5000
salarié . rémunération . net . payé après impôt: 2624
salarié . rémunération . net . à payer avant impôt: 2919"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 4`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4387
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 5`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4362
salarié . rémunération . net . payé après impôt: 2331
salarié . rémunération . net . à payer avant impôt: 2528"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 6`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4156
salarié . rémunération . net . payé après impôt: 2521
salarié . rémunération . net . à payer avant impôt: 2606"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2381
salarié . rémunération . net . payé après impôt: 1614
salarié . rémunération . net . à payer avant impôt: 1636"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2342
salarié . rémunération . net . payé après impôt: 1585
salarié . rémunération . net . à payer avant impôt: 1606"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2409
salarié . rémunération . net . payé après impôt: 1614
salarié . rémunération . net . à payer avant impôt: 1636"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2380
salarié . rémunération . net . payé après impôt: 1594
salarié . rémunération . net . à payer avant impôt: 1616

Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 5`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2349
salarié . rémunération . net . payé après impôt: 1568
salarié . rémunération . net . à payer avant impôt: 1589

Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 6`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2331
salarié . rémunération . net . payé après impôt: 1579
salarié . rémunération . net . à payer avant impôt: 1601

Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 7`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2917
salarié . coût total employeur: 3334
salarié . rémunération . net . payé après impôt: 1898
salarié . rémunération . net . à payer avant impôt: 1919

Notifications affichées : salarié . temps de travail . heures complémentaires . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 8`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2692
salarié . coût total employeur: 3252
salarié . rémunération . net . payé après impôt: 1869
salarié . rémunération . net . à payer avant impôt: 1889

Notifications affichées : salarié . temps de travail . heures complémentaires . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 2298
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 2`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 4`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 1964
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 5`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 2211
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 6`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12900
salarié . rémunération . net . payé après impôt: 6274
salarié . rémunération . net . à payer avant impôt: 7164"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 7`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12900
salarié . rémunération . net . payé après impôt: 6738
salarié . rémunération . net . à payer avant impôt: 7164"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 8`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12900
salarié . rémunération . net . payé après impôt: 6966
salarié . rémunération . net . à payer avant impôt: 7164"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 9`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 2222
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 10`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 11`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28446
salarié . rémunération . net . payé après impôt: 13051
salarié . rémunération . net . à payer avant impôt: 15994

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 12`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28446
salarié . rémunération . net . payé après impôt: 11312
salarié . rémunération . net . à payer avant impôt: 15994

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 2`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42328
salarié . rémunération . net . payé après impôt: 14552
salarié . rémunération . net . à payer avant impôt: 24012

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4513
salarié . rémunération . net . payé après impôt: 2392
salarié . rémunération . net . à payer avant impôt: 2590

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 4`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3665
salarié . rémunération . net . payé après impôt: 2267
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 5`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42328
salarié . rémunération . net . payé après impôt: 15797
salarié . rémunération . net . à payer avant impôt: 24012

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 6`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 2533
salarié . rémunération . net . à payer avant impôt: 2626"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 7`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42328
salarié . rémunération . net . payé après impôt: 17866
salarié . rémunération . net . à payer avant impôt: 26749

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 8`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 2107
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > inversions 1`] = `
"salarié . contrat . salaire brut: 1850
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1442
salarié . rémunération . net . à payer avant impôt: 1442"
`;

exports[`calculate simulations-salarié > inversions 2`] = `
"salarié . contrat . salaire brut: 2554
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3327
salarié . rémunération . net . payé après impôt: 1914
salarié . rémunération . net . à payer avant impôt: 2000"
`;

exports[`calculate simulations-salarié > inversions 3`] = `
"salarié . contrat . salaire brut: 2703
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3606
salarié . rémunération . net . payé après impôt: 2000
salarié . rémunération . net . à payer avant impôt: 2117"
`;

exports[`calculate simulations-salarié > lodeom 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1521
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3665
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5435
salarié . rémunération . net . payé après impôt: 2821
salarié . rémunération . net . à payer avant impôt: 3146"
`;

exports[`calculate simulations-salarié > lodeom 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7794
salarié . rémunération . net . payé après impôt: 3636
salarié . rémunération . net . à payer avant impôt: 4351"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1521
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3000
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4731
salarié . rémunération . net . payé après impôt: 2821
salarié . rémunération . net . à payer avant impôt: 3146"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7794
salarié . rémunération . net . payé après impôt: 3636
salarié . rémunération . net . à payer avant impôt: 4351"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1521
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3000
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4249
salarié . rémunération . net . payé après impôt: 2821
salarié . rémunération . net . à payer avant impôt: 3146"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7353
salarié . rémunération . net . payé après impôt: 3636
salarié . rémunération . net . à payer avant impôt: 4351"
`;

exports[`calculate simulations-salarié > stage 1`] = `
"salarié . contrat . salaire brut: 500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 500
salarié . rémunération . net . payé après impôt: 500
salarié . rémunération . net . à payer avant impôt: 500

Notifications affichées : salarié . contrat . stage . avertissement, salarié . contrat . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié > stage 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2464
salarié . rémunération . net . payé après impôt: 1761
salarié . rémunération . net . à payer avant impôt: 1761

Notifications affichées : salarié . contrat . stage . avertissement"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1603
salarié . rémunération . net . payé après impôt: 1195
salarié . rémunération . net . à payer avant impôt: 1195

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3247
salarié . rémunération . net . payé après impôt: 1894
salarié . rémunération . net . à payer avant impôt: 1979"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 3`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1590
salarié . rémunération . net . payé après impôt: 1170
salarié . rémunération . net . à payer avant impôt: 1170

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 4`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3210
salarié . rémunération . net . payé après impôt: 1854
salarié . rémunération . net . à payer avant impôt: 1938"
`;

exports[`calculate simulations-salarié > temps partiel 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2188
salarié . coût total employeur: 2412
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > temps partiel 2`] = `
"salarié . contrat . salaire brut: 1857
salarié . contrat . salaire brut . équivalent temps plein: 2500
salarié . coût total employeur: 2401
salarié . rémunération . net . payé après impôt: 1441
salarié . rémunération . net . à payer avant impôt: 1448"
`;

exports[`calculate simulations-salarié > temps partiel 3`] = `
"salarié . contrat . salaire brut: 1000
salarié . contrat . salaire brut . équivalent temps plein: 1750
salarié . coût total employeur: 1052
salarié . rémunération . net . payé après impôt: 770
salarié . rémunération . net . à payer avant impôt: 770

Notifications affichées : salarié . contrat . temps de travail . temps partiel . contrôle temps min, salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > treizième mois 1`] = `
"salarié . contrat . salaire brut: 2300
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3209
salarié . rémunération . net . payé après impôt: 1867
salarié . rémunération . net . à payer avant impôt: 1950"
`;

exports[`calculate simulations-salarié > treizième mois 2`] = `
"salarié . contrat . salaire brut: 2300
salarié . contrat . salaire brut . équivalent temps plein: 3096
salarié . coût total employeur: 3773
salarié . rémunération . net . payé après impôt: 2062
salarié . rémunération . net . à payer avant impôt: 2176"
`;

exports[`calculate simulations-salarié > échelle de salaires 1`] = `
"salarié . contrat . salaire brut: 100
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 123
salarié . rémunération . net . payé après impôt: 57
salarié . rémunération . net . à payer avant impôt: 57

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 2`] = `
"salarié . contrat . salaire brut: 250
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 278
salarié . rémunération . net . payé après impôt: 176
salarié . rémunération . net . à payer avant impôt: 176

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 3`] = `
"salarié . contrat . salaire brut: 500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 536
salarié . rémunération . net . payé après impôt: 374
salarié . rémunération . net . à payer avant impôt: 374

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 4`] = `
"salarié . contrat . salaire brut: 750
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 794
salarié . rémunération . net . payé après impôt: 572
salarié . rémunération . net . à payer avant impôt: 572

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 5`] = `
"salarié . contrat . salaire brut: 1000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1052
salarié . rémunération . net . payé après impôt: 770
salarié . rémunération . net . à payer avant impôt: 770

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 6`] = `
"salarié . contrat . salaire brut: 1250
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1310
salarié . rémunération . net . payé après impôt: 968
salarié . rémunération . net . à payer avant impôt: 968

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 7`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1568
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 8`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2283
salarié . rémunération . net . payé après impôt: 1540
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > échelle de salaires 9`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3225
salarié . rémunération . net . payé après impôt: 1873
salarié . rémunération . net . à payer avant impôt: 1957"
`;

exports[`calculate simulations-salarié > échelle de salaires 10`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > échelle de salaires 11`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5435
salarié . rémunération . net . payé après impôt: 2821
salarié . rémunération . net . à payer avant impôt: 3146"
`;

exports[`calculate simulations-salarié > échelle de salaires 12`] = `
"salarié . contrat . salaire brut: 5000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7087
salarié . rémunération . net . payé après impôt: 3382
salarié . rémunération . net . à payer avant impôt: 3950"
`;

exports[`calculate simulations-salarié > échelle de salaires 13`] = `
"salarié . contrat . salaire brut: 10000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 14331
salarié . rémunération . net . payé après impôt: 6229
salarié . rémunération . net . à payer avant impôt: 7967

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 14`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28446
salarié . rémunération . net . payé après impôt: 10966
salarié . rémunération . net . à payer avant impôt: 15994

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 15`] = `
"salarié . contrat . salaire brut: 100000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 129295
salarié . rémunération . net . payé après impôt: 46393
salarié . rémunération . net . à payer avant impôt: 86854

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 16`] = `
"salarié . contrat . salaire brut: 1000000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1245709
salarié . rémunération . net . payé après impôt: 446245
salarié . rémunération . net . à payer avant impôt: 895954

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;
